<package>
  <name>slam_gmapping</name>
  <version>1.3.9</version>
  <description>.</description>
  <author>lumin</author>
  <maintainer email="791375250@qq.com">Vincent Rabaud</maintainer>
  <license>CreativeCommons-by-nc-sa-2.0</license>

  <url>http://ros.org/wiki/slam_gmapping</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>openslam_gmapping</run_depend>
  <run_depend>gmapping</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
